--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@material/card": "^15.0.0-canary.3b5b55e31.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "ffmpeg": "^0.0.4",
+    "imagemin": "^8.0.1",
+    "imagemin-webpack-plugin": "^2.4.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
