--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /tmp
 /out-tsc
 /bazel-out
-/.vscode
+./.vscode
 # Node
 /node_modules
 npm-debug.log
@@ -23,6 +23,7 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
+.vscode
 
 # Visual Studio Code
 .vscode/*
